# SharkEditorGL

./: CMakeLists.txt  compile.sh  getlibs.sh
lib/glew/lib/: libGLEW.so.2.2.0
src/: main.cpp  text.cpp
